Update: - Added password length requirement. - Added to where user cannot leave certain inputs blank when creating/editing records and vehicles.
(Previous)
- Implemented deleting and editing both records and vehicles.
- Added the feature to filter records by one vehicle at a time.
- Fixed some bugs with theme changing.
- Implemented a new window when loading app that check for differences between local and remote data and will notify the user as to which is more current and let the user choose for themselves.
- Added a loading screen for when a user logs in and Firebase is getting data to compare to the local data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="saved_value">Saved Value</string>
+    <string name="filterByValue">Filter Value</string>
 </resources>
